removed permgen option, not available in jdk8